src/app/side-nav/side-nav.component.scss
@import "src/app/shared/sass/variables.scss";

.sidebar {
    height: 100%;

    .mat-drawer-container {
        background: $secondaryBrandColor;
    }

    .mat-drawer-content {
        scroll-behavior: smooth;
        height: calc(100% - 65px);
    }

    .mat-sidenav-content {
        background-color: $secondaryBrandColor;
    }

    ::ng-deep header.title-bar {
        padding: 0 50px;
        height: 42px;
        background-color: $primaryBrandColor;
        color: #fff;

        @media (min-width: 768px) {
            height: 65px;
        }

        .toggle-sidebar {
            color: #fff;
        }
    }

    .sidebar__logo {
        background-color: $secondaryBrandColor;
        padding: 9px 10px;
        display: block;
        border-bottom: 1px solid $primaryBrandColor;
        height: 42px;

        @media (min-width: 768px) {
            height: 65px;
            padding: 4px 30px;
        }
    }

    .mat-expansion-panel-spacing {
        margin: 0 !important;
    }

    &.sidebar--close {
        .sidebar__logo {
            transition: height 0.3s;
            background-image: url("/assets/img/ArchaicQuest-Multi-user-dungeon.png");
            background-repeat: no-repeat;
            background-position: center center;
            background-size: contain;
            padding: 4px 0;
            @media (min-width: 768px) {
                padding: 4px 30px;
                height: 66px;
            }

            img {
                display: none;
            }
        }

        .fa {
            margin-right: 10px;
        }

        ::ng-deep .mat-expansion-indicator {
            display: none;
        }

        ::ng-deep .mat-sidenav-content {
            transition: margin-left 0.3s;
            margin-top: 65px;
            padding: 15px;
        }

        ::ng-deep header.title-bar {
            padding-left: 42px !important;
            transition: padding-left 0.3s;

            @media (min-width: 768px) {
                padding-left: 84px !important;
            }
        }

        .sidebar__sidenav {
            width: $sidebarWidthClosedMobile;
            transition: width 0.3s;

            @media (min-width: 768px) {
                width: $sidebarWidthClosed;
            }
        }
    }

    &.sidebar--open {
        .sidebar__sidenav {
            width: 175px;
            transition: width 0.3s;

            @media (min-width: 768px) {
                width: 250px;
            }
        }

        .sidebar__logo img {
            max-width: 100%;
            margin: auto;
            display: block;

            @media (min-width: 768px) {
                margin-top: 11px;
            }
        }

        ::ng-deep .mat-sidenav-content {
            margin-left: 0px !important;
            margin-top: 65px;
            padding: 15px;
            transition: margin-left 0.3s;

            @media (min-width: 768px) {
                margin-left: 250px !important;
            }
        }

        ::ng-deep header.title-bar {
            padding-left: 172px !important;
            transition: padding-left 0.3s;

            @media (min-width: 768px) {
                padding-left: 272px !important;
            }
        }
    }
}

.sidebar__sidenav {
    position: fixed;
    width: $sidebarWidthOpen;
    background: $primaryBrandColor;
    border: none;
    overflow-x: hidden;

    i.fa,
    i.ra {
        margin-right: 9px;
    }

    ::ng-deep {
        .mat-drawer-inner-container {
            overflow-x: hidden;
        }

        .mat-content {
            line-height: 1;
            min-width: 50px;
        }

        .mat-expansion-panel-header {
            display: flex;
            flex-direction: row;
            align-items: center;
            padding: 0 14px;
            border-radius: inherit;

            @media (min-width: 768px) {
                padding: 0 24px;
            }
        }

        .mat-expansion-panel-header i,
        .mat-expansion-panel-header.title-bar .fa,
        .mat-expansion-panel-header.title-bar .ra {
            margin-right: 9px;
        }

        .mat-expansion-panel-body .fa,
        .mat-expansion-panel-body .ra {
            margin-right: 10px;
        }

        .mat-expansion-panel-header.title-bar {
            border-radius: 0px;

            &:hover {
                background-color: $secondaryBrandColor !important;
            }
        }

        .mat-expansion-panel:not(.mat-expanded):not([aria-disabled="true"]) .mat-expansion-panel-header:hover {
            background: #f6d437 !important;
            color: #222 !important;

            .mat-expansion-indicator::after {
                color: #222 !important;
            }
        }

        .mat-expansion-panel {
            box-shadow: none;
            border-bottom: 1px solid #222;
            border-radius: 0px;
            background: $primaryBrandColor;
            color: #fff;
        }

        .mat-expansion-indicator::after {
            color: #fff !important;
        }
    }

    ::ng-deep .mat-expansion-panel-content {
        background-color: #222;

        ul {
            list-style-type: none;
            margin: 0;
            padding: 20px 0 0 0;

            a {
                display: block;
                color: #fff;
                position: relative;
                left: 0;
                transition: left 0.3s, color 0.3s;

                &:hover {
                    left: 10px;
                    color: #f6d437;
                    transition: left 0.3s, color 0.3s;
                    cursor: pointer;
                }
            }
        }

        li {
            margin-bottom: 15px;
        }
    }
}

.sideNav__footer {
    position: absolute;
    bottom: 20px;
    padding-left: 14px;

    @media (min-width: 768px) {
        padding-left: 24px;
    }

    &-item {
        display: block;
        margin-bottom: 15px;
        color: #fff;
        white-space: nowrap;

        &:last-child {
            margin-bottom: 0;
        }

        &--link {
            &:hover {
                color: #f6d437;
            }
        }

        .fa {
            margin-right: 9px;
        }
    }
}

